--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -330,6 +330,9 @@ figure {
   border-top: 1px solid #eeeeee;
   background-color: #fff;
   font-weight: 300; }
+  .footer .work-time {
+    width: 90px;
+    text-align: right; }
   .footer .footer__box--left {
     text-align: left;
     flex-basis: 23%; }
@@ -339,7 +342,7 @@ figure {
     flex-basis: 20%; }
   .footer .footer__box--right {
     align-self: flex-start;
-    flex-basis: 40%; }
+    flex-basis: 42%; }
   .footer .newsletter .newsletter__box--input {
     flex-basis: 85%; }
     .footer .newsletter .newsletter__box--input input {
@@ -950,7 +953,6 @@ figure {
     position: relative;
     overflow: hidden; }
     #instafeed .items-box__instagram-item .items-box__item--main-image {
-      object-position: center;
       object-fit: cover;
       width: 100%;
       height: 250px;
